deploymentTest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal-web-backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: terminal-web-backend
  template:
    metadata:
      labels:
        app: terminal-web-backend
    spec:
      serviceAccountName: terminal-backend-sa
      containers:
        - name: backend
          image: localhost:32000/terminal-web-backend:latest 
          ports:
            - containerPort: 3300
---
apiVersion: v1
kind: Service
metadata:
  name: terminal-web-service
spec:
  type: NodePort 
  selector:
    app: terminal-web-backend
  ports:
    - protocol: TCP
      port: 3300       
      targetPort: 3300 
      nodePort: 30000
